--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -182,7 +182,7 @@
                 z-index: 0;
                 top: 0;
                 left: 0;
-                height: 150px;
+                height: 155px;
                 margin: auto;
                 width: 100%;
                 display: flex;
@@ -190,12 +190,11 @@
                 transform: rotate(-4deg);
                 flex-direction: column;
                 justify-content: space-between;
-                align-items: flex-start;
                 flex-shrink: 0;
 
                 .slide-track {
-                    -webkit-animation: 60s linear infinite;
-                    animation: 60s linear infinite;
+                    -webkit-animation: 70s linear infinite;
+                    animation: 70s linear infinite;
                     animation-name: scroll10;
                     display: flex;
                     width: 8500px;
@@ -216,14 +215,21 @@
                             font-size: 128px;
                             font-style: normal;
                             font-weight: 300;
-                            line-height: 136%;
+                            line-height: 106%;
                             white-space: nowrap;
                         }
 
                     }
 
-                    video {
-                        width: 400px;
+                    .video_uno {
+                        display:inline-block;
+                        width: 250px;
+                        height: 150px;
+                        border-radius: 172px;
+                    }
+                    .video_dos {
+                        display:inline-block;
+                        width: 300px;
                         height: 150px;
                         border-radius: 172px;
                     }
