--- a/style/sass.css
+++ b/style/sass.css
@@ -4661,17 +4661,17 @@ body {
   margin: auto;
   width: 100%;
   display: flex;
-  align-items: center;
+  align-items: start;
   transform: rotate(-4deg);
   flex-direction: column;
   justify-content: space-between;
   flex-shrink: 0;
 }
 .body__index main .cont_cinta_inicio .slider_inicio .slide-track {
-  animation: 70s linear infinite;
+  animation: 60s linear infinite;
   animation-name: scroll10;
   display: flex;
-  width: 8500px;
+  width: 11000px;
   gap: 20px;
   background: #ffffff;
   box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.322);
@@ -4710,7 +4710,7 @@ body {
     transform: translateX(0);
   }
   100% {
-    transform: translateX(-7200px);
+    transform: translateX(-8800px);
   }
 }
 .cont-cabezera_home {
